--- a/src/main/resources/index/dataShare.html
+++ b/src/main/resources/index/dataShare.html
@@ -23,7 +23,7 @@
         <input class="edit" type="text">
     </div>
     <div class="row">
-        <input type="button" value="提 交" class="submit">
+        <a href="xinxi.html" class="edit" style="text-align: center">提交</a>
     </div>
 </div>
 
