--- a/src/main/resources/index/xinxi.html
+++ b/src/main/resources/index/xinxi.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>个人中心</title>
     <meta charset="UTF-8">
-    <title>个人信息</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
+    <script type="text/javascript" src="bootstrap/js/jquery.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+    <style type="text/css">
+        .vertical-center
+        {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 <body>
+<div class="panel panel-warning">
+    <div class="panel-heading " style="background: #d9534f; color: #ffffff">
+        <span class="glyphicon glyphicon-th-large"  />个人中心
+    </div>
+    <div class="panel-heading   ">
+        <div class="row">
+            <div class="col-xs-6 col-md-6">
+                <div>
+                        <span >账号:
+                            <label style="text-align: center">
+                                K1311P99
+                            </label>
+                        </span>
+                </div>
+                <div>
+                        <span >名字:
+                            <label>
+                                李强
+                            </label>
+                        </span>
+                </div>
+            </div>
 
+<div class="text-center" style="background: #FFF">
+    <div>
+        <p style="text-align: center">表白内容:我喜欢李心♥</p>
+        <p style="text-align: center">发布时间：2023.6.1</p>
+    </div>
+    <button type="button" class="btn btn-success" >
+        <span class="glyphicon glyphicon-home" >返回首頁</button>
+</a>
+</div>
+<p>
+    </div>
 </body>
 </html>
