--- a/src/main/resources/index/xinxi.html
+++ b/src/main/resources/index/xinxi.html
@@ -3,20 +3,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>个人中心</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-    <script type="text/javascript" src="bootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-    <style type="text/css">
-        .vertical-center
-        {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    </style>
 </head>
 <body>
 <div class="panel panel-warning">
@@ -48,10 +34,11 @@
         <p style="text-align: center">发布时间：2023.6.1</p>
     </div>
     <button type="button" class="btn btn-success" >
-        <span class="glyphicon glyphicon-home" >返回首頁</button>
+        <span class="glyphicon glyphicon-home" >返回首頁 </span>
+    </button>
 </a>
 </div>
 <p>
     </div>
-</body>
+ </body>
 </html>
